# turbo-ocr

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml  nginx.conf  nginx.conf.template
include/turbo_ocr/common/: errors.h  logger.h  serialization.h
include/turbo_ocr/engine/: onnx_to_trt.h
include/turbo_ocr/pipeline/: pipeline_dispatcher.h
include/turbo_ocr/routes/: common_routes.h  image_routes.h  pdf_routes.h
include/turbo_ocr/server/: env_utils.h  grpc_service.h  http_routes.h  metrics.h  server_types.h  work_pool.h
scripts/: download_models.sh  entrypoint.sh  fetch_release_models.sh
src/engine/: onnx_to_trt.cpp
src/render/: pdf_renderer.cpp
src/routes/: common_routes.cpp  image_routes.cpp  pdf_routes.cpp
src/server/: cpu_main.cpp  grpc_server.cpp  main.cpp
tests/cpp/: test_pdf_renderer_liveness.cpp  test_serialization.cpp
